--- a/composer.json
+++ b/composer.json
@@ -40,11 +40,14 @@
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/intl-extra": "^3.2",
         "twig/twig": "^2.12|^3.0",
-        "white-october/pagerfanta-bundle": "^1.3"
+        "white-october/pagerfanta-bundle": "^1.3",
+        "codeception/module-phpbrowser": "^1.0.0",
+        "codeception/module-asserts": "^1.0.0"
     },
     "require-dev": {
-        "symfony/browser-kit": "^4.4",
-        "symfony/css-selector": "^4.4",
+        "codeception/module-symfony": "^1.6",
+        "symfony/browser-kit": "4.4.*",
+        "symfony/css-selector": "4.4.*",
         "symfony/debug-bundle": "^4.4",
         "symfony/maker-bundle": "^1.0",
         "symfony/phpunit-bridge": "^5.2",
